# rx-io

./: .gitignore  CMakeLists.txt
assets/: RGSS-BuiltIn.rb
cmake/: FindMRuby.cmake
src/: AppDefs.h  FileIO.hpp  It_Color.hpp  MapParser.hpp  RbUtils.hpp  RxIo.hpp  RxReader.hpp  Table.hpp  main.cpp
src/base/: Convert.hpp  MarshalUtils.hpp  RbUtils.hpp  StrUtils.hpp
src/rbx/: It_Table.hpp  Table.hpp
src/readers/: MapReader.hpp  TilesetReader.hpp
